--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <div id="content">
+        <a href="index.html">
       <div id="header">
           <div class="flex-column">
           <img style="width: 100px;" src="img/Polychem_logo.png" alt="logo">
           <h1>Polychem International</h1>
         </div>
     </div>
+</a>
     <div id="navbar">
         <p><ul>
             <li> <a href="index.html"> Home</a></li>
@@ -25,7 +27,7 @@
     </div>
     
     <p id="headlight">
-        POLYCHEM INTERNATIONAL USES <b>100 % VIRGIN AND CERTIFIED RAW MATERIAL </b>  TO MANUFACTURING OF PRODUCTS SUITABLE FOR FOOD PACKAGING TOO
+        ⭐️ POLYCHEM INTERNATIONAL USES <b>100 % VIRGIN AND CERTIFIED RAW MATERIAL </b>  TO MANUFACTURING OF PRODUCTS SUITABLE FOR FOOD PACKAGING TOO
     </p>
 
     <p id="message">
@@ -77,7 +79,7 @@
         </div>
 
     </div>
-    <p style="margin-bottom: 10px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error saepe voluptatem aliquam dolorum autem corrupti nobis aut a magni sint facere laborum, tempora quidem consequuntur doloribus inventore. Dolorum fugit, sunt ab soluta beatae error laboriosam ad nesciunt culpa doloremque quis cumque labore excepturi omnis, non, nam nobis quod! Ea, officiis.</p>
+    <!-- <p style="margin-bottom: 10px;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error saepe voluptatem aliquam dolorum autem corrupti nobis aut a magni sint facere laborum, tempora quidem consequuntur doloribus inventore. Dolorum fugit, sunt ab soluta beatae error laboriosam ad nesciunt culpa doloremque quis cumque labore excepturi omnis, non, nam nobis quod! Ea, officiis.</p> -->
     
     <h3>Visit us</h3>
     <center>
