--- a/html/aim.html
+++ b/html/aim.html
@@ -10,12 +10,16 @@
 </head>
 <body>
     <div id="content">
+
+        <a href="../index.html">
         <div id="header">
             <div class="flex-column">
             <img style="width: 100px;" src="../img/Polychem_logo.png" alt="logo">
             <h1>Polychem International</h1>
           </div>
       </div>
+    </a>
+
       <div id="navbar">
           <p><ul>
             <li> <a href="../index.html"> Home</a></li>
@@ -54,6 +58,19 @@
 
      </div>
 
+     <footer>
+        <div class="flex-row">
+            <img style="width: 100px;" src="../img/Polychem_logo.png" alt="logo">
+            <div>
+                © Polychem International, 2021 <br>
+                Manufacturer in: All kinds of polybag (P.P, HM, LD) <br>
+                <br>
+                C-43, Sector-65, Noida-201309 (U.P) <br>
+                Ph.No. 0120-4546-910, Mob: 08447343965 <br>
+                Email: polychem60@gmail.com
+            </div>
+        </div>
+    </footer>
       </div>
 </body>
 </html>
