--- a/html/contact.html
+++ b/html/contact.html
@@ -10,12 +10,16 @@
 </head>
 <body>
     <div id="content">
+
+        <a href="../index.html">
         <div id="header">
             <div class="flex-column">
             <img style="width: 100px;" src="../img/Polychem_logo.png" alt="logo">
             <h1>Polychem International</h1>
           </div>
       </div>
+    </a>
+
       <div id="navbar">
           <p><ul>
             <li> <a href="../index.html"> Home</a></li>
