--- a/html/product.html
+++ b/html/product.html
@@ -9,12 +9,17 @@
 </head>
 <body>
     <div id="content">
+
+        <a href="../index.html">
         <div id="header">
             <div class="flex-column">
             <img style="width: 100px;" src="../img/Polychem_logo.png" alt="logo">
             <h1>Polychem International</h1>
           </div>
       </div>
+    </a>
+
+
       <div id="navbar">
           <p><ul>
               <li> <a href="../index.html"> Home</a></li>
@@ -22,6 +27,11 @@
               <li><a href="../html/contact.html">Contact Us</a></li>
               <li><a href="../html/product.html">Product Gallery</a></li>
           </ul></p>
-      </div>
+        </div>
+        <center>
+        <div>
+        <h2>Coming Soon ... </h2>
+    </div>
+</center>
 </body>
 </html>
